On tap OOP tiep

--- a/NET102_SD18301/BAI_1_OnTap_OOP/BAI_1_OnTap_OOP.csproj
+++ b/NET102_SD18301/BAI_1_OnTap_OOP/BAI_1_OnTap_OOP.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cho.cs" />
+    <Compile Include="ChoService.cs" />
     <Compile Include="DongVat.cs" />
+    <Compile Include="LyThuyetOOP.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
