--- a/NET102_SD18301/BAI_15_FILE_DOI_TUONG/BAI_15_FILE_DOI_TUONG.csproj
+++ b/NET102_SD18301/BAI_15_FILE_DOI_TUONG/BAI_15_FILE_DOI_TUONG.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BIN_SERVICE.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SERVICE.cs" />
@@ -50,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="FileStudent.bin" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="FileStudent.txt" />
